# netcdfhpp

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindNetCDF.cmake  netcdfhppConfig.cmake.in
include/: netcdf++.h  netcdf.hpp  netcdfpp.hpp
test/: CMakeLists.txt  test_create_and_open.cxx  test_interface.cxx
